# tyrecon

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  core-ideas.md
contrib/: CMakeLists.txt
shared/: memory_block.hpp  meta.hpp  rva.hpp  unique_vector.hpp  va.hpp
test_program/: CMakeLists.txt  main.cpp
win_agent/: CMakeLists.txt  configuration.cpp  plat_init.cpp
win_agent/allocation_tracking/: allocation_tracker.cpp  allocation_tracker.hpp  crt_instrumentation.cpp  track_usage.cpp
win_agent/configuration/: configuration.cpp
win_agent/debugger/: veh.cpp  veh.hpp
win_agent/disassembler/: zydis_disasm.hpp
win_agent/exfiltration/: exfiltration.cpp
win_agent/function_finder/: find_functions.cpp  function_analyzer.cpp  function_processing.cpp  functions.hpp  track_dynamic_dispatch.cpp  walk_pdata.cpp
win_agent/installer/: README.md  main.cpp
win_agent/instrumentation/: execution_context.cpp  execution_context.hpp  fault_inducer.cpp  fault_inducer.hpp  function_replacement.cpp  function_replacement.hpp  stackwalk.cpp  stackwalk.hpp  veh.cpp  veh.hpp
win_agent/module/: module.cpp  module.hpp
win_agent/process/: process.cpp  process.hpp
win_agent/rtti/: rtti.cpp  rtti.hpp  rtti_analyzer.cpp
win_agent/type_tracking/: instrumentation.cpp  type_tracker.cpp  type_tracker.hpp
